--- a/Parcial2/EventoDelegacion/EventoDelegacion.css
+++ b/Parcial2/EventoDelegacion/EventoDelegacion.css
@@ -5,7 +5,7 @@
 }
 
 .contenedor {
-    
+    background-image: linear-gradient(greenyellow, black);
     width: 100vw;
     height: 100vh;
     display: grid;
@@ -18,7 +18,65 @@
 }
 
 .caja {
-   
+    font-size: 170%;
+    margin: auto;
+    width: 300px;
+    height: 300px;
+    background-color: brown;
+    text-align: center ;
+    border: 1px solid greenyellow;
+    text-shadow: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.caja2 {
+    font-size: 170%;
+    margin: auto;
+    width: 300px;
+    height: 300px;
+    background-color: brown;
+    text-align: center;
+    border: 1px solid greenyellow;
+    text-shadow: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.caja3 {
+    font-size: 170%;
+    margin: auto;
+    width: 300px;
+    height: 300px;
+    background-color: brown;
+    text-align: center;
+    border: 1px solid greenyellow;
+    text-shadow: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.caja4 {
+    font-size: 170%;
+    margin: auto;
+    width: 300px;
+    height: 300px;
+    background-color: brown;
+    text-align: center;
+    border: 1px solid greenyellow;
+    text-shadow: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.caja5 {
+    font-size: 170%;
+    margin: auto;
+    width: 300px;
+    height: 300px;
+    background-color: brown;
+    text-align: center;
+    border: 1px solid greenyellow;
+    text-shadow: 100%;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.caja6 {
+    font-size: 170%;
+    margin: auto;
+    width: 300px;
+    height: 300px;
     background-color: brown;
     text-align: center;
     border: 1px solid greenyellow;
@@ -26,8 +84,23 @@
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.cajaAzul{
+.cambiarcolor{
     background-color: black;
+}
+.cambiarcolor2{
+    background-color: green;
+}
+.cambiarcolor3{
+    background-color: palevioletred;
+}
+.cambiarcolor4{
+    background-color: blue;
+}
+.cambiarcolor5{
+    background-color: orange;
+}
+.cambiarcolor6{
+    background-color: purple;
 }
 
 
