--- a/Parcial2/XMLHTTP/xmlhttp.css
+++ b/Parcial2/XMLHTTP/xmlhttp.css
@@ -3,6 +3,25 @@
     margin:0;
     padding:0;
 }
+#btnajax{
+    width: 150px;
+    height: 100px;
+    font-size: 30px;
+    border-radius: 10px;
+    border-color: black;
+    text-align: center;
+
+
+}
+
+#btnreset{
+    width: 150px;
+    height: 100px;
+    font-size: 30px;
+    border-radius: 10px;
+    border-color: black;
+    text-align: center;
+}
 
 .contenedor {
     background-image: linear-gradient(greenyellow, black);
